--- a/responsive.html
+++ b/responsive.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Responsive Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="responsive.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
@@ -16,6 +16,8 @@
 <body>
 
     <button onclick="moreFun()" id="more"><i class="fa fa-bars"></i></button>
+    <img id="patat" src="img/patat.png">
+    
 
     <div id="navbar" class="hide">
 
@@ -24,10 +26,19 @@
         <button>Stickers</button>
         <button>Vliegen</button>
         <button>Papier</button>
-
+  
     </div>
+    <p id="text">Responsive Website</p>
+    <img id="keyboard" src="img/keyboard.jpg">
+    <img id="huis" src="img/huis.jpg">
+    <img id="baby" src="img/baby.jpg">
+    <img id="papier" src="img/papier.jpg">
+    <img id="auto" src="img/auto.jpg">
+    <img id="vlieg" src="img/vlieg.jpg">
+    <img id="mouse" src="img/mouse.jpg">
+    <img id="konijn" src="img/konijn.jpg">
 
-    <img src="img/patat.png">
+    <p>Door Khizer 18A1</p>
 
     <script src="responsive.js"></script>
 
