--- a/responsive.html
+++ b/responsive.html
@@ -15,6 +15,7 @@
 
 <body>
 
+    <img id="appel" src="img/appel.png">
     <button onclick="moreFun()" id="more"><i class="fa fa-bars"></i></button>
     <img id="patat" src="img/patat.png">
     
